--- a/style.css
+++ b/style.css
@@ -132,7 +132,6 @@ h2#informacoes {
   color: rgba(9, 37, 135);
   position: relative;
   display: block;
-  width: 220px;
 }
 
 #descricao {
@@ -229,4 +228,60 @@ li.objetivos-p {
   font-weight: 600;
   font-style: italic;
   font-size: 17px;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal .content {
+  background-color: #d3d3d3;
+  margin: 25vh auto;
+  padding: 20px;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  border: rgba(9, 37, 135);
+}
+
+.emailModal {
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  color: rgb(46, 46, 46);
+}
+
+.textoModal {
+  color: rgb(46, 46, 46);
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+
+#mensagem {
+  height: 150px;
+  width: 300px;
+}
+
+#enviar {
+  background-color: rgba(9, 37, 135);
+  border: none;
+  color: #d3d3d3;
+  padding: 10px;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  font-size: 16px;
+  cursor: pointer;
 }
